# cosurf

./: .gitignore  BROWSER_AUTOMATION_GUIDE.md  Cargo.toml  LICENSE  README.md  SUMMARIZE_PAGE_OPTIMIZATION.md  agent.md  cargo_error.txt  check_native_exports.js  cosurf_log.txt  cosurf_log2.txt  cosurf_log3.txt  cosurf_log4.txt  cosurf_log5.txt  electron-builder.yml  electron.vite.config.1781373237663.mjs  electron.vite.config.ts  launch_dev.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick_start.cmd  start_dev.bat  test-content-select.js  test-deduplication.js
docs/: AGENT_DYNAMIC_TOOLS.md  AGENT_TOOLS_STATUS.md  AI_PANEL_DRAG_RESIZE.md  CHECKPOINT_IMPLEMENTATION_SUMMARY.md  CHECKPOINT_MECHANISM_RESEARCH.md  CHECKPOINT_VERIFICATION_GUIDE.md  CODEX_INTEGRATION_PLAN.md  CODEx_CLI_INTEGRATION.md  CODEx_DEPENDENCY_ANALYSIS.md  CODEx_FEASIBILITY_ASSESSMENT.md  CODEx_INTEGRATION_PROGRESS.md  CODEx_SELECTIVE_EXTRACTION_RESULT.md  CONFIG_PERSISTENCE_FIXES.md  DB_MODULE_REFACTORING.md  FUNCTION_CALLING_IMPLEMENTATION.md  FUNCTION_CALLING_OPTIMIZATION.md  FUNCTION_FIXES.md  IMPLEMENTATION_SUMMARY.md  IQS_API_KEY_PERSISTENCE_FIX.md  IQS_CONFIGURATION.md  IQS_IMPLEMENTATION_SUMMARY.md  IQS_QUICK_START.md  IQS_SKILLS_CONFIG_DECOUPLING.md  MCP_JSON_CONFIG.md  MCP_QUICK_START.md  MCP_SKILL_IMPLEMENTATION.md  MCP_SKILL_SUMMARY.md  MCP_STANDARD_CONFIG.md  NATIVE_MODULE_BUILD.md  PYTHON_CALCULATOR_FIX.md  QUICKSTART.md  SETTINGS_PAGE_FIXES.md  SKILLS_DIRECTORY_MANAGEMENT.md  SKILLS_DIRECTORY_MODIFICATION.md  SKILLS_ENGINE_REFACTORING.md  SKILLS_GUIDE.md  SKILLS_IMPLEMENTATION.md  SKILLS_MARKDOWN_GUIDE.md  SKILLS_PERSISTENCE.md  SKILLS_REFACTORING.md  (+4 more)
electron/: content-preload.ts  ipc-handlers.ts  main.ts  network-interceptor.ts  preload.ts  tsconfig.json  window-manager.ts
electron/modules/: ai-context-menu.ts  content-selector.ts  enhanced-content-selector.ts  event-tracker.ts  page-extractor-simple.ts  page-extractor.ts
examples/: alibabacloud-iqs-search-skill.json  alibabacloud-iqs-search-skill.md  echo-skill.json  echo-skill.md  python-calculator-skill.json  python-calculator-skill.md  weather-search-skill.md
examples/skills/alibaba-iqs-search/: SKILL.md
examples/skills/python-calculator/: SKILL.md
examples/skills/web-summarizer/: SKILL.md
native/: Cargo.toml
native/examples/: optimized_agent_loop.rs
native/prompts/: agent.md  decision.md  memory.md  reader.md  recall.md  remember.md
native/src/: cache.rs  error.rs  lib.rs  screenshot.rs
native/src/ai/: agent.rs  checkpoint.rs  codex_adapter.rs  codex_adapter_tests.rs  context_manager.rs  mcp.rs  mcp_manager.rs  mock_codex_cli.js  mod.rs  provider.rs  scheduler.rs  skills.rs  stream.rs  tool_registry.rs  tools.rs
native/src/codex-extracted/: Cargo.toml
native/src/codex-integration/: README.md
native/src/db/: bookmarks.rs  conversations.rs  history.rs  mcp_servers.rs  messages.rs  mod.rs  model_configs.rs  settings.rs  user_events.rs
playwright-service/: package-lock.json  package.json
playwright-service/src/: actions.ts  browser-manager.ts  index.ts  server.ts  types.ts
scripts/: build-native.ps1  build.ps1  check.ps1  dev-with-native.ps1  dev.ps1  verify_checkpoint.ps1
src-tauri/: Cargo.toml  tauri.conf.json  updater.json
src-tauri/capabilities/: default.json  tab-webviews.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: agent.rs  mcp.rs  mod.rs  playwright_client.rs  provider.rs  sandbox.rs  skills.rs  stream.rs  tools.rs
src-tauri/src/ai/skills_executors/: command_utils.rs  mcp.rs  mod.rs
src-tauri/src/ai/tools_impl/: dispatcher.rs  mod.rs  open_url.rs  run_command.rs  summarize_page.rs  web_agent.rs  web_search.rs
src-tauri/src/commands/: ai.rs  ai_agent.rs  bookmark.rs  browser.rs  browser_nav.rs  conversation.rs  message.rs  mod.rs  page_cache.rs  page_context.rs  screenshot.rs  settings.rs  skills.rs
src-tauri/src/db/: bookmarks.rs  conversations.rs  history.rs  messages.rs  mod.rs  settings.rs
src-web/: index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
src-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-web/src/hooks/: useTheme.ts
src-web/src/lib/: api.ts  browserEngine.ts  electronBridge.ts  eventManager.ts  events.ts  mock.ts  tauri.ts  tools.ts  (+1 more)
(+163 files in other folders)
