[package]
name = "cosurf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CoSurf - AI Native Desktop Browser"

[lib]
name = "cosurf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cosurf"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-http = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-updater = "2.2"
tauri-plugin-window-state = "2.0"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
url = "2.5"
tokio-util = { version = "0.7", features = ["io"] }
lazy_static = "1.4"

# 截图
xcap = "0.4"
image = "0.25"

# 页面缓存
sha2 = "0.10"
base64 = "0.22"
arboard = "3.4"

# HTML 解析和正则表达式
regex = "1.10"

# Skills Markdown 解析
serde_yaml = "0.9"
markdown = "1.0"

# 目录处理
dirs = "5.0"

# 异步 trait
async-trait = "0.1"
