[package]
name = "codex-extracted"
version = "0.1.0"
edition = "2021"
description = "Extracted Codex Agent Loop core logic for CoSurf integration"

[dependencies]
# ===== 外部依赖（直接使用）=====
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"

# ===== CoSurf 已有的依赖 =====
once_cell = "1.19"

# ===== 可选依赖（根据需要添加）=====
# uuid = { version = "1.0", features = ["v4"] }
# chrono = { version = "0.4", features = ["serde"] }
# regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
